# amoxide-rs

./: .aliases  .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  all.aliases  cliff.toml  dist-workspace.toml  faq.html  hashmap.json  index.html  local.aliases  privacy.html  release-plz.toml  sitemap.xml  typos.toml
.cargo/: config.toml
.githooks/: commit-msg
.github/: dependabot.yml  pull_request_template.md
advanced/: composing-aliases.html  config-files.html  index.html  parameterized-aliases.html  update-check.html
assets/: advanced_composing-aliases.md.C0kFl2wS.js  advanced_composing-aliases.md.C0kFl2wS.lean.js  advanced_composing-aliases.md.D29jiMoh.js  advanced_composing-aliases.md.D29jiMoh.lean.js  advanced_composing-aliases.md.DHbU1EFw.js  advanced_composing-aliases.md.DHbU1EFw.lean.js  advanced_composing-aliases.md.DOC9vJr_.js  advanced_composing-aliases.md.DOC9vJr_.lean.js  advanced_config-files.md.6NhmhtHF.js  advanced_config-files.md.6NhmhtHF.lean.js  advanced_config-files.md.Bb6daXdy.js  advanced_config-files.md.Bb6daXdy.lean.js  advanced_config-files.md.Bf5g0ORv.js  advanced_config-files.md.Bf5g0ORv.lean.js  advanced_config-files.md.C5x8vy5X.js  advanced_config-files.md.C5x8vy5X.lean.js  advanced_config-files.md.CItgrvbo.js  advanced_config-files.md.CItgrvbo.lean.js  advanced_config-files.md.CTVPC0RG.js  advanced_config-files.md.CTVPC0RG.lean.js  advanced_config-files.md.CoBRV9yS.js  advanced_config-files.md.CoBRV9yS.lean.js  advanced_config-files.md.CwPhdQyc.js  advanced_config-files.md.CwPhdQyc.lean.js  advanced_config-files.md.DDyRzdQL.js  advanced_config-files.md.DDyRzdQL.lean.js  advanced_config-files.md.DyV5m6A4.js  advanced_config-files.md.DyV5m6A4.lean.js  advanced_config-files.md.G2Vn1gB5.js  advanced_config-files.md.G2Vn1gB5.lean.js  (+812 more)
crates/am/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/am-tui/: CHANGELOG.md  Cargo.toml  README.md
crates/am-tui/src/: app.rs  delegation.rs  input.rs  lib.rs  main.rs  model.rs  tree.rs  update.rs  view.rs
crates/am-tui/src/update/: delegation.rs  mod.rs  navigation.rs  profile_actions.rs  selection.rs  text_input.rs  transfer.rs  trust.rs
crates/am/src/: alias.rs  alias_id.rs  app_model.rs  cli.rs  completion.rs  config.rs  context.rs  described.rs  dirs.rs  display.rs  effects.rs  env_vars.rs  exchange.rs  hook.rs  import_export.rs  init.rs  lib.rs  messages.rs  precedence.rs  profile.rs  project.rs  prompt.rs  security.rs  session.rs  setup.rs  status.rs  subcommand.rs  sync_outcome.rs  trust.rs  update.rs  update_check.rs  vars.rs
crates/am/src/context/: aliases.rs  escape.rs  invalid.rs  mod.rs  preamble.rs  shadows.rs  trust_notice.rs  variables.rs
crates/am/src/precedence/: diff.rs  engine.rs  env_state.rs  mod.rs
crates/am/src/setup/: fish.rs
crates/am/src/shell/: bash.rs  brush.rs  fish.rs  mod.rs  nix.rs  power_shell.rs  powershell.rs  shell.rs  shell_enum.rs  zsh.rs
crates/am/src/shell_scripts/: hook.fish  wrapper.zsh
crates/am/src/shell_wrappers/: hook.bash  hook.fish  hook.ps1  hook.zsh  wrapper.bash  wrapper.fish  wrapper.ps1  wrapper.zsh
crates/am/src/state/: actions.rs  middleware.rs  mod.rs  reducers.rs  state.rs  store.rs
crates/am/tests/: cli_descriptions.rs  completion_snapshots.rs  context.rs  context_setup.rs  e2e.rs  setup.rs  snapshots.rs  suite.rs  var_command.rs  var_exchange.rs  var_sync.rs  zsh_alias_scan.rs
crates/am/tests/setup/: claude.rs  mod.rs
crates/am/tests/snapshots/: completion_snapshots__shim_bash_registration.snap  completion_snapshots__shim_fish_registration.snap  completion_snapshots__shim_powershell_registration.snap  completion_snapshots__shim_zsh_registration.snap  context__snapshot_context_brief.snap  context__snapshot_context_verbose.snap  snapshots__snapshot_display_deep_chain.snap  snapshots__snapshot_display_inheritance_tree.snap  snapshots__snapshot_display_listing_with_globals_and_project.snap  snapshots__snapshot_display_multi_active.snap  snapshots__snapshot_display_profile_list.snap  snapshots__snapshot_export_all.snap  snapshots__snapshot_export_single_profile.snap  snapshots__snapshot_hook_bash_with_aliases.snap  snapshots__snapshot_hook_fish_leaving_project.snap  snapshots__snapshot_hook_fish_transition.snap  snapshots__snapshot_hook_fish_with_aliases.snap  snapshots__snapshot_hook_powershell_with_aliases.snap  snapshots__snapshot_hook_zsh_with_aliases.snap  snapshots__snapshot_import_summary_no_conflicts.snap  snapshots__snapshot_import_summary_with_conflicts.snap  snapshots__snapshot_init_bash_force_with_tracked_aliases.snap  snapshots__snapshot_init_bash_simple_profile.snap  snapshots__snapshot_init_bash_with_kubectl_subcommands.snap  snapshots__snapshot_init_fish_abbr_force_with_tracked_aliases.snap  snapshots__snapshot_init_fish_deep_chain.snap  snapshots__snapshot_init_fish_force_no_previous.snap  snapshots__snapshot_init_fish_force_with_tracked_aliases.snap  snapshots__snapshot_init_fish_globals_and_inherited_profile.snap  snapshots__snapshot_init_fish_globals_and_multi_profile.snap  snapshots__snapshot_init_fish_inherited_profile.snap  snapshots__snapshot_init_fish_multi_profile.snap  snapshots__snapshot_init_fish_simple_profile.snap  snapshots__snapshot_init_fish_with_globals.snap  snapshots__snapshot_init_fish_with_simple_subcommands.snap  snapshots__snapshot_init_powershell_simple_profile.snap  snapshots__snapshot_init_zsh_simple_profile.snap  snapshots__snapshot_listing_tampered_project.snap  snapshots__snapshot_listing_unknown_project.snap  snapshots__snapshot_listing_untrusted_project.snap  (+24 more)
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  lib.rs  main.rs
crates/lib/: Cargo.toml
crates/lib/src/: actions.rs  lib.rs
crates/lib/src/alias/: add.rs  env.rs  mod.rs  shared.rs
crates/lib/src/shells/: mod.rs  nix.rs  power_shell.rs  shared.rs  zsh.rs
crates/lib/src/verbs/: env.rs  init.rs
crates/sm-cli/: Cargo.toml  build.rs
crates/sm-cli/src/: lib.rs
experiments/zsh-builtin/: Cargo.toml  README.md
experiments/zsh-builtin/src/: lib.rs
(+5284 files in other folders)
