[workspace]
resolver = "2"
members = [
    "crates/am",
    # "crates/am-lib",
    # "crates/am-bin",
    # "crates/am-cli",
    # "experiments/bash-builtin",
    # "experiments/zsh-builtin",
]

[workspace.dependencies]
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
indoc = "2.0"
