[workspace]
resolver = "2"
members = ["crates/am", "crates/am-tui"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/sassman/amoxide-rs"
publish = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
