[workspace]
resolver = "2"
members = ["crates/am", "crates/am-tui"]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/sassman/amoxide-rs"
publish = false

[workspace.dependencies]
toml = "1"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
