[package]
name = "amoxide-tui"
description = "Interactive TUI for amoxide — manage aliases and profiles visually"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "am-tui"
path = "src/main.rs"

[dependencies]
amoxide = { path = "../am" }
ratatui = "0.30"
anyhow = "1.0"

[dev-dependencies]
toml = "1"
