[package]
name = "amoxide-tui"
description = "Interactive TUI for amoxide — manage aliases and profiles visually"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
readme = "README.md"

[[bin]]
name = "am-tui"
path = "src/main.rs"

[dependencies]
amoxide = { path = "../am", version = "0.1.1-beta.2" }
ratatui = "0.30"
anyhow = "1.0"

[dev-dependencies]
toml = "1"
