[package]
name = "amoxide-tui"
description = "Interactive TUI for amoxide — manage aliases and profiles visually"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/sassman/amoxide-rs"
publish = true
readme = "README.md"

[[bin]]
name = "am-tui"
path = "src/main.rs"

[dependencies]
amoxide = { path = "../am", version = "0.7.0" }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
anyhow = "1.0"

[dev-dependencies]
amoxide = { path = "../am", version = "0.7.0", features = ["test-util"] }
toml = { workspace = true }
tempfile = { workspace = true }
