[package]
name = "amoxide"
description = "Shell alias manager — manage aliases globally via profiles or per-project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/sassman/amoxide-rs"
publish = true
readme = "README.md"

[[bin]]
name = "am"
path = "src/bin/am.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2"
base64 = "0.22"
clap = { version = "4.6", features = ["help", "derive", "usage", "env"] }
env_logger = "0.11"
log = "0.4"
dirs-lite = { version = "1", features = ["favor-xdg-style"] }
toml = { workspace = true }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["rustls"] }
blake3 = "1"
indoc = "2.0"
tempfile = { workspace = true }
terminal_size = "0.4"
unicode-width = "0.2"

# blake3's NEON C path won't build under cargo-xwin's clang backend — the
# msvc-sysroot exposes ARM64 NEON intrinsics as no-op macros that break
# __builtin_shufflevector. Fall back to the portable path on this target only.
[target.'cfg(all(target_arch = "aarch64", target_os = "windows"))'.dependencies]
blake3 = { version = "1", features = ["no_neon"] }

[features]
test-util = []

[dev-dependencies]
insta = "1"

[build-dependencies]
clap_complete = "4.6"
clap = { version = "4.6", features = ["help", "derive", "usage", "env"] }
regex = "1"
