[package]
name = "sm-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["help", "derive", "env"] }
dirs = "4.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rev_buf_reader = "*"